# lab07-files-serialization-wems99

./: .gitignore  CMakeLists.txt  Lab07-app2.rar
src/: CMakeLists.txt  IObjectSave.cpp  IObjectSave.h  Person.cpp  Person.h  PersonList.cpp  PersonList.h  PersonManager.cpp  PersonManager.h  SaveAsBinary.cpp  SaveAsBinary.h  SaveAsJson.cpp  SaveAsJson.h  main.cpp
tst/: CMakeLists.txt
